--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,10 @@ footer {
   align-items: center;
 }
 
+.search input[type="text"] {
+            color: white;
+}
+
 #searchInput {
   padding: 8px;
   font-size: 16px;
